@@ -1,3 +1,9 @@
+2003-06-09  Don Porter  <dgp@users.sourceforge.net>
+
+        * string.test (string-4.15): Added test for [string first] bug
+        reported in Tcl 8.3, where test for all-single-byte-encoded strings
+        was not reliable.
+
 2003-06-04  Joe Mistachkin  <joe@mistachkin.com>
 
         * tools/man2help.tcl: Added duplicate help section checking           
